--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 
 :root{
   --flex-bg-tint-color: #212431;/*212431;*/
-  --flex-bg-color: #040b14;
+  --flex-bg-color: #140a04;
   --bg-color-primary:#fff;
   --bg-color-secondary:#f5f8fd;
   --text-color-primary: #000000;
@@ -34,6 +34,7 @@
   --heading-color: #fff;
   --section-heading-color: #173b6c;
   --icon-bg-light-blue: #dff3fc;
+  --hw: 220px;
 }
 /* 83,178,234 */
 [data-theme="dark"]{
@@ -119,7 +120,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left: 0;
   bottom: 0;
-  width: 300px;
+  width: var(--hw);
   transition: all ease-in-out 0.5s;
   z-index: 9997;
   transition: all 0.5s;
@@ -129,10 +130,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .profile img {
-  margin: 15px auto;
+  margin: 0px auto;
   display: block;
   width: 120px;
-  border: 8px solid var(--flex-bg-tint-color);
+  
+  /**border: 8px solid var(--flex-bg-tint-color);**/
+  filter: brightness(80%);
 }
 
 #header .profile h1 {
@@ -173,7 +176,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #main {
-  margin-left: 300px;
+  margin-left: var(--hw);
 }
 
 @media (max-width: 1199px) {
@@ -370,7 +373,8 @@ input:checked + .theme-switch-text{
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 50vh;
+  height: 20vh;
+  padding: 0 0;
   /* bottom: 0px;
   right: 0px; */
   /* background: url("../videos/wall.mp4") top center;
@@ -383,7 +387,7 @@ input:checked + .theme-switch-text{
   background: var(--home-bg-tint-color);
   position: absolute;
   width: 100%;
-  min-height: 50vh;
+  max-height: 20vh;
   top: 0;
   left: 0;
   bottom: 0;
@@ -395,15 +399,15 @@ input:checked + .theme-switch-text{
 }
 
 #hero .video-background{
-  position: relative;
-  /* top: 0; */
+  position: absolute;
+  top: 0;
   /* left: 0; */
-  bottom: 50;
+  bottom: 0;
   right: 0; 
-  /* width: 100%; */
-  min-height: 50vh;
+  width: 100%;
+  max-height: 20vh;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   background: rgb(255, 255, 255);
   filter: blur(1px);
   filter: brightness(90%);
@@ -411,9 +415,10 @@ input:checked + .theme-switch-text{
 
 
 #hero .hero-container {
-  position: absolute;
+  position: relative;
   z-index: 10;
-  top: 25%;
+  top: 15%;
+  left: 5%;
   min-width: 300px; 
   /* text-shadow: .4rem .4rem .5rem rgb(0, 132, 255); */
   text-shadow: 0rem 0rem .2rem rgb(0, 0, 0), 0rem 0rem 0.8rem black;
@@ -422,7 +427,7 @@ input:checked + .theme-switch-text{
 
 #hero .hero-container p{
   z-index: 10;
-  top: 25%;
+  top: 40%;
   min-width: 300px; 
   text-shadow: 0rem 0rem 0.2rem black, 0rem 0rem 0.8rem black;
   padding-bottom: 1rem;
@@ -432,13 +437,13 @@ input:checked + .theme-switch-text{
   text-align: center;
 }
 
-#hero h1 {
-  margin: 0 0 1.5rem 0;
-  font-size: 6rem;
-  font-weight: 700;
-  line-height: 56px;
-  color: #fff;
-}
+  #hero h1 {
+    margin: 0 0 1.5rem 0;
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 56px;
+    color: #db1a1a;
+  }
 
 #hero p {
   color: #fff;
@@ -532,7 +537,7 @@ input:checked + .theme-switch-text{
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 30px 0;
   overflow: hidden;
 }
 
@@ -557,7 +562,7 @@ section {
   content: '';
   position: absolute;
   display: block;
-  width: 50px;
+  width: 50 px;
   height: 3px;
   background: var(--highlight-color);
   bottom: 0;
