--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 
 :root{
-  --flex-bg-tint-color: #212431;/*212431;*/
+  --flex-bg-tint-color: #e6e6e6;/*212431;*/
   --flex-bg-color: #140a04;
   --bg-color-primary:#fff;
   --bg-color-secondary:#f5f8fd;
